--- a/style.css
+++ b/style.css
@@ -79,7 +79,156 @@
   font-size: 14px;
   width: 80px;
 }
+
 .second-half {
   background-color: #fefefe;
   height: 750px;
+  display: grid;
+  grid-template-columns: 25% 75%;
+}
+.side-bar {
+  width: 290px;
+  height: 100%;
+  border-right: 1px solid #cdcdcd;
+  background-color: #fefefe;
+  display: flex;
+  flex-direction: column;
+}
+.aboutfam {
+  margin-left: 30px;
+  margin-top: 80px;
+  font-size: 14px;
+}
+.famtitle {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 410px;
+  grid-row-gap: space-between;
+}
+.line {
+  width: 90%;
+  margin: 10px 0;
+  height: 1px;
+  background-color: #cdcdcd;
+}
+.image {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.imgtext {
+  font-size: 12px;
+  color: #cdcdcd;
+  font-weight: bold;
+}
+.col--2 {
+  margin-top: 15px;
+  display: grid;
+  width: 60px;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+.col--2 img,
+.col--3 img,
+.col--4 img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+}
+.col--3 {
+  margin-top: 15px;
+  display: grid;
+  width: 60px;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 15px;
+}
+.col--4 {
+  margin-top: 15px;
+  display: grid;
+  width: 60px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 15px;
+}
+
+.aboutme {
+  margin-left: 30px;
+  margin-top: 30px;
+  font-size: 14px;
+}
+.metitle {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 410px;
+  grid-row-gap: space-between;
+}
+.pair-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+.up {
+  color: #cdcdcd;
+  font-size: 12px;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
+.rightwala {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 50px;
+}
+.box--3 {
+  background-color: #fca424;
+  margin: 10px;
+  height: 50px;
+  width: 100%;
+}
+.long-box {
+  background-color: blueviolet;
+  height: 50px;
+  width: 100%;
+}
+.right-side {
+  display: flex;
+  flex-direction: row;
+  height: 70px;
+  width: 100%;
+  border-bottom: 1px solid #cdcdcd;
+}
+.top-nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1.5fr 1fr 1fr 1fr 1fr;
+  gap: 12px;
+  width: 890px;
+  margin-top: 30px;
+  font-size: 14px;
+}
+.dash {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-right: 10px;
+  border-bottom: 2px solid #fca424;
+}
+.claimbtn {
+  background-color: #0dd39d;
+  margin-top: -8px;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 70px;
+  padding: 5px 10px;
+  color: #fefefe;
+  font-size: 14px;
+  border-radius: 2px;
+}
+
+.box--3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 80px;
+}
+.boxs {
+  background-color: #cdcdcd;
+  height: 120px;
+  width: 250px;
 }
