--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   font-family: sans-serif;
 }
 .main-container {
-  background-color: yellow;
+  background-color: rgba(226, 226, 164, 0.619);
   padding: 50px 150px;
 }
 .first-half {
@@ -78,6 +78,7 @@
   color: #fefefe;
   font-size: 14px;
   width: 80px;
+  cursor: pointer;
 }
 
 .second-half {
@@ -187,6 +188,7 @@
   width: 890px;
   margin-top: 30px;
   font-size: 14px;
+  cursor: pointer;
 }
 .dash {
   display: flex;
@@ -205,6 +207,7 @@
   color: #fefefe;
   font-size: 14px;
   border-radius: 2px;
+  cursor: pointer;
 }
 
 .box--3 {
@@ -260,6 +263,10 @@
   width: 30px;
 }
 
+.long--2 {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
 .long-box {
   margin-top: 30px;
   display: grid;
@@ -298,4 +305,28 @@
   background-color: #fca424;
   padding: 10px;
   margin-top: 120px;
+  cursor: pointer;
+}
+.lines {
+  width: 70%;
+  margin: 10px 0;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+.actdetail {
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+  width: 270px;
+  margin-bottom: 20px;
+}
+.acts {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.light {
+  color: #eae1e1ce;
+}
+.dark {
+  color: #cdcdcd;
 }
